# specialized-homework

./: README.md  requirements.txt
lab02/: lab02.ipynb
lab04/: lab04.ipynb
lab04/models/: knn_v1.pkl  rf_v1.pkl  svm_v1.pkl  xg_v1.pkl
lab04/scripts/: classifiers.py
lab05/: lab05.ipynb
lab05/data/: lx.pkl  ly.pkl  nlx.pkl  nly.pkl
lab05/scripts4/: deploy.py  evaluator.py  preprocess.py
lab05/scripts5/: mlp.py  perceptron.py
lesson02/: lesson02.ipynb  pyproject.toml
lesson02/.ipynb_checkpoints/: lesson02-checkpoint.ipynb
