[tool.poetry]
name = "spec"
version = "0.1.0"
description = ""
authors = ["vasiliymironoff <vasiliymironoff@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.1"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
scipy = "^1.14.1"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"
ipykernel = "^6.29.5"
notebook = "^7.2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
